# tavily-rs

./: .gitignore  Cargo.toml  README.md
examples/: advanced_search.rs  basic_extract.rs  basic_search.rs
src/: client.rs  error.rs  response.rs
