[package]
name = "tavily2"
version = "0.1.0"
edition = "2024"
authors = ["launcher-rs"]
description = "A tiny tool for calling Tavily's REST API in the simplest way!"
license = "MIT"
repository = "https://github.com/launcher-rs/tavily-rs"
keywords = ["Tavily", "search-engine", "web-browser", "llm-search", "rag"]

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic_search"
path = "examples/basic_search.rs"

[[example]]
name = "advanced_search"
path = "examples/advanced_search.rs"

[[example]]
name = "basic_extract"
path = "examples/basic_extract.rs"
